<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#ede7f6"
                tools:context=".MainActivity">

    <TextView
        style="@style/CustomLable"
        android:id="@+id/lblHeader"
        android:layout_height="wrap_content"
        android:text="@string/Tag_Title" />

    <Button
        android:id="@+id/btnSpotify_Streamer"
        style="@style/CustomButton"
        android:layout_height="wrap_content"
        android:text="@string/Tag_Spotify_Streamer" />

    <Button
        style="@style/CustomButton"
        android:id="@+id/btnScores_App"
        android:layout_height="wrap_content"
        android:text="@string/Tag_Scores_App" />

    <Button
        style="@style/CustomButton"
        android:id="@+id/btnLibrary_App"
        android:layout_height="wrap_content"
        android:text="@string/Tag_Library_App" />


    <Button
        style="@style/CustomButton"
        android:id="@+id/btnBuild_It_Bigger"
        android:layout_height="wrap_content"
        android:text="@string/Tag_Build_It_Bigger" />

    <Button
        style="@style/CustomButton"
        android:id="@+id/btnXyz_Reader"
        android:layout_height="wrap_content"
        android:text="@string/Tag_Xyz_Reader" />

    <Button
        style="@style/CapstoneButton"
        android:id="@+id/btnCapstone"
        android:layout_height="wrap_content"
        android:text="@string/Tag_Capstone" />

</LinearLayout>
